@@ -1,0 +1,2 @@
+class Pagamento < ActiveRecord::Base
+end
