@@ -1,2 +1,3 @@
 class TiposPagamento < ActiveRecord::Base
+
 end
